[package]
name = "pg-geoip"
version = "0.1.0"
authors = ["Marti Raudsepp <marti@juffo.org>"]
edition = "2018"

[build]
rustflags = ["-C", "link-arg=-undefineddynamic_lookup"]

[features]
pg_allocator = []

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "pg-geoip"
path = "src/bin.rs"

[dependencies]
pg-extern-attr = { version = "*", git = "https://github.com/bluejekyll/pg-extend-rs" }
pg-extend = { version = "*", git = "https://github.com/bluejekyll/pg-extend-rs" }
maxminddb = "*"
lazy_static = "*"
