[package]
name = "pg-geoip"
version = "0.1.0"
authors = ["Marti Raudsepp <marti@juffo.org>"]
edition = "2018"

[features]
pg_allocator = []

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "pg-geoip"
path = "src/bin.rs"

[dependencies]
pg-extern-attr = { version = "*", path = "../pg-extend-rs/pg-extern-attr" }
pg-extend = { version = "*", path = "../pg-extend-rs/pg-extend" }
maxminddb = "*"
lazy_static = "*"
